     XML files). It used to always return 'false' for those rules.
    -The public field Language.DEMO has been removed. It is now only available 
     internally for tests, together with the demo language itself and DemoChunker.
    -JLanguageTool.printIfVerbose() has been changed from protected to private,
     as it was not used anywhere and it's not really useful to extend JLanguageTool.
    -StringTools.isAlphabetic() has been removed as it was a workaround for Java 6
     which is not supported anymore

-GUI:
    -Improved configuration dialog
    -Allow the user to change the font of the main editing area

Rule syntax:
    -It is now possible to specify case sensitivity of individual exceptions
     and tokens in a pattern (both in grammar and disambiguation XML rules).
     Simply use case_sensitive="yes" or case_sensitive="no".

-Internals:
    -Fixed bug with longer complex strings of tokens to be unified
    -Fixed bug in a disambiguator where tokens with min="0" were mislocated


2.5 (2014-03-31)

-Breton:
    -a new rule checks that there is a space character between sentences

-Catalan:
    -added/improved many rules
    -fixed false alarms
    -added hundreds of suggestions for barbarisms in a simple replace rule

-Dutch:
    -remove a hack from the word tokenizer code
    -several new false friends (by Sander van Geloven)

-English:
    -added a new rule to handle corrections of mistakes in standard
     English contractions (wasnt, didnt)
    -changed word tokenization so that the hyphen at the end of a
     word is no longer its part
    -removed spelling replacement pairs that made LT work very slowly
    -fixed a large number of false alarms
    -added new rules to handle common contextual misspellings and
     redundant phrases as well as common grammatical mistakes. Now
     the number of rules for English exceeds 1000.
    -made it possible to use synthesizer to both add a determiner and