@@ -122,6 +122,14 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
             <example type="correct">This is <marker>fuu bah</marker>.</example>
             <example correction="foo fuu bah" type="incorrect">This is <marker>foo bar</marker>.</example>
         </rule>
+        <rule id="DEMO_RULE_OFF" name="off by default" default="off">
+            <pattern>
+                <token>foosomething</token>
+            </pattern>
+            <message>This rule is off by default</message>
+            <example type="correct">This is <marker>foo different</marker>.</example>
+            <example type="incorrect">This is <marker>foosomething</marker>.</example>
+        </rule>
         <rulegroup id="OR_GROUPS" name="OR groups">
             <rule>
                 <pattern>
