@@ -59,6 +59,8 @@ LanguageTool Change Log
      internally for tests, together with the demo language itself and DemoChunker.
     -JLanguageTool.printIfVerbose() has been changed from protected to private,
      as it was not used anywhere and it's not really useful to extend JLanguageTool.
+    -JLanguageTool.getAllActiveRules() has been fixed to not return rules that have
+     the default="off" attribute (unless they have been enabled explicitly)
     -StringTools.isAlphabetic() has been removed as it was a workaround for Java 6
      which is not supported anymore
 
